--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Advent+Pro|Creepster" rel="stylesheet">
     <title>Meal Tracker</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
